Modal z-index fix.

--- a/onekloud/common_static/css/onekloud/core.css
+++ b/onekloud/common_static/css/onekloud/core.css
@@ -133,12 +133,25 @@ h3, h4, h5, h6 {
     display: none;
 }
 
+.ui-dialog {
+    padding: 2em;
+    background: #fff;
+    z-index: 10;
+    border-radius: .5em;
+    box-shadow: 0 0 5px rgba(0,0,0,.1);
+    -webkit-box-shadow: 0 0 5px rgba(0,0,0,.1);
+    -moz-box-shadow: 0 0 5px rgba(0,0,0,.1);
+    -o-box-shadow: 0 0 5px rgba(0,0,0,.1);
+    -ms-box-shadow: 0 0 5px rgba(0,0,0,.1);
+}
+
 .ui-widget-overlay {
     position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
+    z-index: 9;
     background: rgba(226,226,226,.9);
 }
 
@@ -161,17 +174,6 @@ h3, h4, h5, h6 {
     background: none;
     border: none;
     padding: 0;
-}
-
-.ui-dialog {
-    padding: 2em;
-    background: #fff;
-    border-radius: .5em;
-    box-shadow: 0 0 5px rgba(0,0,0,.1);
-    -webkit-box-shadow: 0 0 5px rgba(0,0,0,.1);
-    -moz-box-shadow: 0 0 5px rgba(0,0,0,.1);
-    -o-box-shadow: 0 0 5px rgba(0,0,0,.1);
-    -ms-box-shadow: 0 0 5px rgba(0,0,0,.1);
 }
 
 /* Footer */
